--- a/document_settings.yml
+++ b/document_settings.yml
@@ -1,8 +1,8 @@
 document:
-  name: Regolamento attivita' sportive del comune di Palermo
+  name: carta_servizi-civici_musei_comune_Udine
   description: |
-    Regolamento attivita' sportive del comune di Palermo.    
+    carta_servizi-civici_musei_comune_Udine.    
   tags:
-    - sport
-    - regolamento 
-    - comune Palermo
+    - musei
+    - carta servizi 
+    - comune Udine
